[package]
name = "mether"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
clap = { version = "3.1.18", features = ["derive"] }
termion = "1.5.6"
num-traits = "0.2.15"
itertools = "0.10.3"
